--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "metalsmith-collections": "^0.7.0",
     "metalsmith-drafts": "0.0.1",
     "metalsmith-excerpt": "^0.1.1",
+    "metalsmith-hover": "0.0.1",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.4.0",
     "metalsmith-templates": "^0.6.1",
