--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "chalk": "^1.0.0",
     "co": "^4.6.0",
     "commander": "^2.6.0",
+    "download-github-repo": "^0.1.3",
     "duo": "^0.14.1",
     "duo-myth": "^0.2.0",
     "express": "^4.12.3",
     "gh-pages": "^0.2.0",
+    "gh-resolve": "^5.1.1",
     "handlebars": "^3.0.1",
     "helper-date": "^0.2.1",
     "indent": "0.0.1",
@@ -33,7 +35,9 @@
     "metalsmith-title": "0.0.1",
     "myth": "^1.5.0",
     "read-metadata": "^1.0.0",
-    "root-domain": "^0.1.0"
+    "rimraf": "^2.4.2",
+    "root-domain": "^0.1.0",
+    "thunkify-wrap": "^1.0.4"
   },
   "devDependencies": {
     "duo": "^0.10.0",
